--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@
 .repl_history
 build/
 
+-/log/*.log
+-/tmp
+-public/assets
+-public/.DS_Store
+-.DS_Store
+-coverage
+
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
